--- a/package.json
+++ b/package.json
@@ -31,12 +31,12 @@
     "cors": "^2.8.5",
     "date-fns": "^3.3.1",
     "dotenv": "^16.4.5",
-    "downshift": "^8.3.1",
     "express": "^4.18.3",
     "framer-motion": "^10.16.4",
     "http-proxy-middleware": "^2.0.6",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.344.0",
+    "mongodb-memory-server": "^9.1.6",
     "mongoose": "^8.2.1",
     "openai": "^4.28.0",
     "passport": "^0.7.0",
