--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "predev": "npx tsc -p server/tsconfig.json"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.0.2",
+    "@mui/material": "^7.0.2",
     "@react-google-maps/api": "^2.19.2",
     "@supabase/supabase-js": "^2.21.0",
     "@types/bcryptjs": "^2.4.6",
@@ -26,6 +30,7 @@
     "@types/qrcode": "^1.5.5",
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-datepicker": "^6.0.1",
+    "amadeus": "^11.0.0",
     "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
     "concurrently": "^8.2.2",
@@ -45,16 +50,17 @@
     "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
     "pdfkit": "^0.14.0",
+    "process": "^0.11.10",
     "qrcode": "^1.5.3",
     "query-string": "^9.0.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
+    "react-google-autocomplete": "^2.7.5",
     "react-intersection-observer": "^9.8.1",
     "react-router-dom": "^6.22.3",
-    "stripe": "^14.19.0",
-    "use-places-autocomplete": "^4.0.1"
+    "stripe": "^14.19.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
@@ -67,9 +73,10 @@
     "eslint-plugin-react-refresh": "^0.4.11",
     "globals": "^15.9.0",
     "postcss": "^8.4.35",
+    "react-error-overlay": "^6.0.9",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2"
+    "vite": "^6.2.5"
   }
 }
