--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "predev": "npx tsc -p server/tsconfig.json"
   },
   "dependencies": {
+    "react-paginate": "^8.2.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.0.2",
@@ -57,7 +58,6 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
-    "react-google-autocomplete": "^2.7.5",
     "react-intersection-observer": "^9.8.1",
     "react-router-dom": "^6.22.3",
     "stripe": "^14.19.0"
