--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "framer-motion": "^10.16.4",
+    "googleapis": "^133.0.0",
     "http-proxy-middleware": "^2.0.6",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.344.0",
@@ -60,7 +61,44 @@
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.8.1",
     "react-router-dom": "^6.22.3",
-    "stripe": "^14.19.0"
+    "stripe": "^14.19.0",
+    "travelpayouts": "^1.0.0",
+    "country-data": "^0.0.31",
+    "google-auth-library": "^9.6.3",
+    "@dicebear/core": "^7.0.1",
+    "@dicebear/collection": "^7.0.1",
+    "weather-js": "^2.0.0",
+    "rss-parser": "^3.13.0",
+    "langchain": "^0.1.21",
+    "cheerio": "^1.0.0-rc.12",
+    "compromise": "^14.11.0",
+    "natural": "^6.10.4",
+    "sentiment": "^5.0.2",
+    "socket.io": "^4.7.4",
+    "socket.io-client": "^4.7.4",
+    "@speechly/speech-recognition-polyfill": "^1.3.0",
+    "react-speech-recognition": "^3.10.0",
+    "@tensorflow/tfjs": "^4.17.0",
+    "react-webcam": "^7.2.0",
+    "react-markdown": "^9.0.1",
+    "react-calendar-heatmap": "^1.9.0",
+    "react-photo-gallery": "^8.0.0",
+    "react-map-gl": "^7.1.7",
+    "mapbox-gl": "^3.1.2",
+    "react-chartjs-2": "^5.2.0",
+    "chart.js": "^4.4.1",
+    "i18next": "^23.10.0",
+    "i18next-browser-languagedetector": "^7.2.0",
+    "i18next-http-backend": "^2.5.0",
+    "react-i18next": "^14.0.5",
+    "flag-icons": "^7.1.0",
+    "react-confetti": "^6.1.0",
+    "react-dropzone": "^14.2.3",
+    "react-share": "^5.1.0",
+    "react-calendar": "^4.8.0",
+    "react-hook-form": "^7.51.0",
+    "uuid": "^9.0.1",
+    "@types/uuid": "^9.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
