--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -5,6 +5,8 @@
     "moduleResolution": "NodeNext",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
+    "strictNullChecks": false,
+    "noImplicitAny": false,
     "strict": true,
     "skipLibCheck": true,
     "outDir": "../dist/server",
