--- a/package.json
+++ b/package.json
@@ -35,6 +35,11 @@
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-datepicker": "^6.0.1",
     "@types/uuid": "^9.0.8",
+    "@uppy/aws-s3": "^4.2.3",
+    "@uppy/core": "^4.4.4",
+    "@uppy/dashboard": "^4.3.3",
+    "@uppy/image-editor": "^3.3.2",
+    "@uppy/react": "^4.2.3",
     "amadeus": "^11.0.0",
     "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
@@ -56,7 +61,7 @@
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-http-backend": "^2.5.0",
     "jsonwebtoken": "^9.0.2",
-    "langchain": "^0.1.21",
+    "langchain": "^0.3.23",
     "lucide-react": "^0.344.0",
     "mapbox-gl": "^3.1.2",
     "mongodb-memory-server": "^9.1.6",
@@ -91,7 +96,9 @@
     "react-router-dom": "^6.22.3",
     "react-share": "^5.1.0",
     "react-speech-recognition": "^3.10.0",
+    "react-use": "^17.6.0",
     "react-webcam": "^7.2.0",
+    "regenerator-runtime": "^0.14.1",
     "rss-parser": "^3.13.0",
     "sentiment": "^5.0.2",
     "socket.io": "^4.7.4",
